--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zebra-c/gulp-cli",
-  "version": "1.0.8",
+  "version": "1.2.1",
   "description": "zebra gulp cli",
   "main": "gulpfile.js",
   "author": "zebra-c",
@@ -14,28 +14,17 @@
     "url": "https://github.com/zebra-c/gulp-cli.git"
   },
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.6.5",
-    "cookie-parser": "^1.4.1",
-    "es3ify-loader": "^0.2.0",
-    "style-loader": "^0.13.1",
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-register": "^6.22.0",
-    "bundle-loader": "^0.5.4",
+    "babel-loader": "^8.1.0",
     "chalk": "^4.0.0",
+    "commander": "^5.0.0",
     "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
     "file-loader": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
@@ -47,16 +36,12 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-webpack": "^1.5.0",
     "html-loader": "^0.4.3",
     "less": "^3.11.1",
     "less-loader": "^2.2.3",
     "moment": "^2.24.0",
-    "postcss": "^5.2.12",
-    "postcss-loader": "^1.2.2",
-    "postcss-px2rem": "^0.3.0",
+    "style-loader": "^0.13.1",
     "terser-webpack-plugin": "^2.3.5",
-    "text-loader": "0.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-stream": "^5.2.1"
